--- a/src/app.scss
+++ b/src/app.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 html {
   scroll-snap-type: y mandatory;
   scroll-behavior: smooth;
@@ -7,11 +9,13 @@ html {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "DM Sans", sans-serif;
+  font-family: "Poppins";
+  font-weight: 400;
+  font-style: normal;
 }
 
 body {
-  background-color: #0c0c1d;
+  background-color: #000000;
   color: lightgray;
 }
 
@@ -39,6 +43,12 @@ section {
 
 @mixin desktop {
   @media (max-width: 1366px) {
+    @content;
+  }
+}
+
+@mixin SE {
+  @media (max-width: 375px) and (max-height: 667px) {
     @content;
   }
 }
