--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -1,203 +1,181 @@
 @import "../../app.scss";
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:ital,wght@0,100..900;1,100..900&display=swap");
 .hero {
   height: calc(100vh - 100px);
   overflow: hidden;
-  background: linear-gradient(180deg, #0c0c1d, #111132);
-  position: relative;
+  //background: linear-gradient(180deg, #0c0c1d, #111132);
+  background: linear-gradient(180deg, #000000, #111132);
   padding-left: 100px;
   padding-right: 100px;
 
-  @include mobile {
-    padding-left: 2px;
-    padding-right: 2px;
-  }
-
-  .wrapper {
-    max-width: 1366px;
+  .hero-wrapper {
     height: 100%;
+    width: 100%;
     margin: auto;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 
     .textContainer {
-      width: 50%;
-      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      gap: 40px;
-      padding-bottom: 20px;
+      gap: 20px;
+      text-align: center;
+      white-space: nowrap;
+      width: auto;
 
       @include mobile {
-        height: 50%;
-        width: 100%;
-        gap: 20px;
-        align-items: center;
-        text-align: center;
+        margin-top: -50px;
       }
 
-      h3 {
-        font-size: 40px;
-        color: darkgrey;
+      @include SE {
+        .name {
+          font-size: 25px;
+        }
+        .job {
+          font-size: 15px;
+        }
       }
 
       h2 {
         font-size: 60px;
-        color: rebeccapurple;
-        letter-spacing: 10px;
-
-        @include mobile {
-          font-size: 30px;
-          white-space: nowrap;
-        }
+        color: rgb(200, 200, 200);
+        letter-spacing: 2px;
+        font-family: "Jost", sans-serif;
+        font-optical-sizing: auto;
+        font-weight: 500;
+        font-style: normal;
       }
 
       h1 {
-        font-size: 30px;
-
-        @include mobile {
-          font-size: 25px;
-          white-space: nowrap;
-        }
+        font-size: 20px;
+        color: rgb(193, 193, 193);
+        letter-spacing: 3px;
       }
-
-      .button-85 {
-        padding: 0.6em 2em;
-        border: none;
-        outline: none;
-        color: rgb(255, 255, 255);
-        background: #111;
-        cursor: pointer;
-        position: relative;
-        z-index: 0;
-        border-radius: 10px;
-        user-select: none;
-        -webkit-user-select: none;
-        touch-action: manipulation;
-        margin-right: 20px;
-      }
-
-      .button-85:before {
-        content: "";
-        background: linear-gradient(
-          45deg,
-          #ff0000,
-          #ff7300,
-          #fffb00,
-          #48ff00,
-          #00ffd5,
-          #002bff,
-          #7a00ff,
-          #ff00c8,
-          #ff0000
-        );
-        position: absolute;
-        top: -2px;
-        left: -2px;
-        background-size: 400%;
-        z-index: -1;
-        filter: blur(5px);
-        -webkit-filter: blur(5px);
-        width: calc(100% + 4px);
-        height: calc(100% + 4px);
-        animation: glowing-button-85 20s linear infinite;
-        transition: opacity 0.3s ease-in-out;
-        border-radius: 10px;
-      }
-
-      @keyframes glowing-button-85 {
-        0% {
-          background-position: 0 0;
-        }
-
-        50% {
-          background-position: 400% 0;
-        }
-
-        100% {
-          background-position: 0 0;
-        }
-      }
-
-      .button-85:after {
-        z-index: -1;
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: #222;
-        left: 0;
-        top: 0;
-        border-radius: 10px;
-      }
-
-      /*.buttons {
-                button {
-                    padding: 20px;
-                    border: 2px solid orange;
-                    border-radius: 10px;
-                    background-color: lightblue;
-                    color: black;
-                    margin-right: 20px;
-                    cursor: pointer;
-                    font-weight: 300;
-                    
-
-                    
-
-                    @include mobile {
-                        width: 100px;
-                        height: 50px;
-                        padding: 5px;
-                        margin: 10px;
-                        display: inline-block;
-                    }
-                }
-            } */
-
-      img {
-        width: 50px;
-
-        @include mobile {
-          display: none;
-        }
+      .buttons {
+        padding: 20px;
       }
     }
   }
 
   .imageContainer {
-    height: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-
-    @include mobile {
-      height: 50%;
-      width: 100%;
-      top: unset;
-      bottom: 0;
-      margin-bottom: 50px;
-    }
+    position: relative;
+    //border: solid 2px red;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 300px;
+      height: 300px;
       object-fit: contain;
-      border-radius: 60%;
-      padding: 100px;
 
       @include mobile {
-        padding: 50px;
+        width: 230px;
+        height: 225px;
+      }
+    }
+
+    @include SE {
+      .ihza-pic {
+        width: 255px;
       }
     }
   }
-
-  .slidingTextContainer {
-    position: absolute;
-    font-size: 50vh;
-    bottom: -120px;
-    white-space: nowrap;
-    color: #ffffff09;
-    width: 50%;
-    font-weight: bold;
+}
+@media screen and (min-width: 500px) and (max-width: 1024px) {
+  .hero-wrapper {
+    display: flex;
+    flex-direction: column;
   }
+}
+
+@media only screen and (max-width: 480px) {
+  .hero-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  h2 {
+    white-space: wrap;
+  }
+  h1 {
+    font-weight: light;
+  }
+}
+
+.button-85 {
+  padding: 0.6em 2em;
+  border: none;
+  outline: none;
+  color: rgb(255, 255, 255);
+  background: #111;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  border-radius: 10px;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  margin-right: 20px;
+  font-family: "Poppins";
+  letter-spacing: 2px;
+}
+
+.button-85:before {
+  content: "";
+  background: linear-gradient(
+    45deg,
+    #ff0000,
+    #ff7300,
+    #fffb00,
+    #48ff00,
+    #00ffd5,
+    #002bff,
+    #7a00ff,
+    #ff00c8,
+    #ff0000
+  );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 400%;
+  z-index: -1;
+  filter: blur(5px);
+  -webkit-filter: blur(5px);
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  animation: glowing-button-85 20s linear infinite;
+  transition: opacity 0.3s ease-in-out;
+  border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+  0% {
+    background-position: 0 0;
+  }
+
+  50% {
+    background-position: 400% 0;
+  }
+
+  100% {
+    background-position: 0 0;
+  }
+}
+
+.button-85:after {
+  z-index: -1;
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #222;
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+}
+
+.button-85:hover {
+  scale: 1.1;
+  transition: 0.5s;
 }
