--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,49 +1,44 @@
 @import "../../app.scss";
 
 .navbar {
-    height: 100px;
-    padding-left: 100px;
-    padding-right: 100px;
+  height: 100px;
+  padding-left: 100px;
+  padding-right: 100px;
+
+  @include mobile {
+    padding-right: 1px;
+  }
+
+  .wrapper {
+    max-width: 1366px;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 100%;
 
     @include mobile {
-        padding-right: 1px;
+      justify-content: right;
+      align-items: center;
+      padding-right: 20px;
     }
 
+    span {
+      font-weight: bold;
 
-    .wrapper {
-        max-width: 1366px;
-        margin: auto;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 100%;
-
-
-        @include mobile {
-            justify-content: flex-end;
-            padding: 20px;
-
-        }
-
-
-        span {
-            font-weight: bold;
-
-            @include mobile {
-                display: none;
-
-            }
-        }
-
-        .social {
-            display: flex;
-            gap: 20px;
-
-            img {
-                width: 18px;
-                height: 18px;
-            }
-        }
-
+      @include mobile {
+        display: none;
+      }
     }
+
+    .social {
+      display: flex;
+      gap: 20px;
+
+      img {
+        width: 18px;
+        height: 18px;
+      }
+    }
+  }
 }
