delete button and add gallery

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -5,7 +5,8 @@
   height: calc(100vh - 100px);
   overflow: hidden;
   //background: linear-gradient(180deg, #0c0c1d, #111132);
-  background: linear-gradient(180deg, #000000, #111132);
+  //background: linear-gradient(180deg, #000000, #111132);
+  background: black;
   padding-left: 100px;
   padding-right: 100px;
 
