--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -48,9 +48,17 @@
 
   .section-container {
     display: flex;
+    gap: 4rem;
+    justify-content: space-evenly;
 
     @include mobile {
       display: block;
+    }
+    @include tablet {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 0;
     }
   }
 
@@ -90,13 +98,6 @@
     border: solid 1px;
     border-color: darkgoldenrod;
     text-align: center;
-  }
-
-  .section-container {
-    gap: 4rem;
-
-    @include mobile {
-    }
   }
 
   .section__pic-container {
