--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -9,6 +9,10 @@
     padding: 5px;
   }
 
+  @include tablet {
+    padding: 10px;
+  }
+
   .progress {
     position: sticky;
     top: 0;
@@ -78,15 +82,20 @@
           align-items: center;
           padding: 60px;
         }
+
+        @include tablet {
+          // height: auto;
+          // width: auto;
+        }
       }
     }
 
     img {
       width: 100%;
       height: 100%;
-      max-width: fit-content;
-      max-height: fit-content;
-      object-fit: contain;
+      // max-width: fit-content;
+      // max-height: fit-content;
+      object-fit: cover;
       border-radius: 50px;
       border: solid darkgoldenrod 2px;
 
@@ -97,6 +106,11 @@
         margin-top: 60px;
         border-radius: 20%;
         padding: 10px;
+      }
+
+      @include tablet {
+        //width: 50%;
+        //height: 50%;
       }
     }
 
