--- a/src/components/experience/experience.scss
+++ b/src/components/experience/experience.scss
@@ -15,7 +15,8 @@
   }
 
   .experience-sub-title {
-    color: darkgoldenrod;
+    // color: darkgoldenrod;
+    color: black;
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -51,12 +52,12 @@
     gap: 2.5rem;
     justify-content: space-around;
     border: transparent;
+    color: black;
   }
 
   article {
     display: flex;
     width: 10rem;
-    //justify-content: space-around;
     gap: 0.5rem;
     border: transparent;
 
@@ -89,11 +90,15 @@
     }
   }
 
+  h3 {
+    font-weight: bold;
+  }
+
   .details-container {
     padding: 1rem;
     //display: block;
     //flex: 1;
-    background: darkblue;
+    background: rgb(194, 194, 194);
     border-radius: 2rem;
     border: white;
     text-align: start;
