--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -91,7 +91,7 @@
         padding: 20px;
 
         border: none;
-        background-color: lightgrey;
+        background-color: rgb(180, 180, 180);
         cursor: pointer;
         font-weight: 700;
         border-radius: 50px;
