--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -76,12 +76,13 @@
       }
 
       .imageContainer {
-        height: 40%;
+        height: 300px;
+        width: 300px;
         padding: 50px;
 
         @include mobile {
           align-items: center;
-          padding: 60px;
+          // padding: 60px;
         }
       }
     }
@@ -99,7 +100,7 @@
         object-fit: cover;
         height: 100%;
         width: 100%;
-        margin-top: 60px;
+        // margin-top: 60px;
         border-radius: 20%;
         padding: 10px;
       }
