--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -23,7 +23,8 @@
     @include mobile {
       justify-content: flex-end;
       width: 100%;
-      background: black;
+      // background: black;
+      background-image: url("/galaxy2.jpg");
     }
 
     .links {
