add transisition to submit button

--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -6,7 +6,7 @@
   overflow: hidden;
   //background: linear-gradient(180deg, #0c0c1d, #111132);
   //background: linear-gradient(180deg, #000000, #111132);
-  background: black;
+  // background: black;
   padding-left: 100px;
   padding-right: 100px;
 
@@ -49,6 +49,9 @@
         font-weight: 500;
         font-style: normal;
       }
+      // h2 span {
+      //   color: goldenrod;
+      // }
 
       h1 {
         font-size: 20px;
