--- a/src/app.scss
+++ b/src/app.scss
@@ -15,7 +15,9 @@ html {
 }
 
 body {
-  background-color: #000000;
+  // background-color: #000000;
+  background-image: url(/public/galaxy2.jpg);
+  background-attachment: fixed;
   color: lightgray;
 }
 
