--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -95,10 +95,14 @@
         cursor: pointer;
         font-weight: 700;
         border-radius: 50px;
+        transition: background-color 0.3s ease;
 
         @include mobile {
           padding: 10px;
         }
+      }
+      button:hover {
+        background-color: darkgoldenrod;
       }
     }
   }
