revert back to black backround

--- a/src/app.scss
+++ b/src/app.scss
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-  // background-color: #000000;
-  background-image: url(/public/galaxy2.jpg);
+  background-color: #000000;
+  // background-image: url(/public/galaxy2.jpg);
   background-attachment: fixed;
   color: lightgray;
 }
