--- a/src/components/Skills/SkillsStyles.module.scss
+++ b/src/components/Skills/SkillsStyles.module.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .container {
   display: flex;
   flex-direction: column;
@@ -39,6 +41,17 @@ hr {
   margin: 30px auto;
 }
 
+@include tablet {
+  .container {
+    padding-top: 250px;
+  }
+}
+
+@include mobile {
+  .container {
+    padding-top: 50px;
+  }
+}
 @media (width >= 800px) {
   .skillList {
     max-width: fit-content;
