--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  color: rgb(0, 0, 0);
+  // color: rgb(0, 0, 0);
 
   @include mobile {
     color: white;
@@ -18,7 +18,7 @@
     left: 0;
     bottom: 0;
     width: 50vh;
-    background: rgb(255, 255, 255);
+    background: rgb(0, 0, 0);
 
     @include mobile {
       justify-content: flex-end;
